修正了处理不包含dcm的zip的bug 修正了已关闭log窗口，后面重新提示的bug

--- a/Anonymizer/LogBrowser.ui
+++ b/Anonymizer/LogBrowser.ui
@@ -16,6 +16,9 @@
   <property name="windowTitle">
    <string>LogBrowser</string>
   </property>
+  <property name="autoFillBackground">
+   <bool>false</bool>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QTextBrowser" name="logTextBrowser">
     <property name="geometry">
