--- a/Anonymizer/Anonymizer.ui
+++ b/Anonymizer/Anonymizer.ui
@@ -11,38 +11,25 @@
     <x>0</x>
     <y>0</y>
     <width>600</width>
-    <height>455</height>
+    <height>462</height>
    </rect>
   </property>
   <property name="acceptDrops">
    <bool>false</bool>
   </property>
   <property name="windowTitle">
-   <string>Anonymizer 1.5</string>
+   <string>Anonymizer 1.6</string>
   </property>
   <property name="autoFillBackground">
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>50</y>
-      <width>101</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>OpenFolder</string>
-    </property>
-   </widget>
    <widget class="QProgressBar" name="progressBar">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>180</y>
-      <width>391</width>
+      <x>180</x>
+      <y>150</y>
+      <width>371</width>
       <height>23</height>
      </rect>
     </property>
@@ -53,9 +40,9 @@
    <widget class="QProgressBar" name="progressBar_2">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>260</y>
-      <width>391</width>
+      <x>180</x>
+      <y>220</y>
+      <width>371</width>
       <height>23</height>
      </rect>
     </property>
@@ -63,7 +50,7 @@
      <number>0</number>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="statusLabel">
     <property name="geometry">
      <rect>
       <x>260</x>
@@ -79,13 +66,13 @@
      <string>Waiting...</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="folderNameLabel">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>100</y>
-      <width>361</width>
-      <height>20</height>
+      <x>10</x>
+      <y>80</y>
+      <width>1111</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -95,9 +82,9 @@
    <widget class="QProgressBar" name="progressBar_3">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>340</y>
-      <width>391</width>
+      <x>180</x>
+      <y>290</y>
+      <width>371</width>
       <height>23</height>
      </rect>
     </property>
@@ -108,7 +95,7 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>280</x>
       <y>420</y>
       <width>321</width>
       <height>20</height>
@@ -118,52 +105,52 @@
      <string>Copyright © 2020 huangbiubiu, All Rights Reserved.</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="anoDcmBtn">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>10</x>
       <y>140</y>
-      <width>281</width>
-      <height>31</height>
+      <width>161</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Step 1: anonymize .dcm files</string>
+     <string>anonymize all .dcm</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="anoZipBtn">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>220</y>
-      <width>281</width>
-      <height>31</height>
+      <x>10</x>
+      <y>210</y>
+      <width>161</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Step 2: anonymize .zip files</string>
+     <string>anonymize all .zip</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_4">
+   <widget class="QPushButton" name="anoNofixBtn">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>300</y>
-      <width>281</width>
-      <height>31</height>
+      <x>10</x>
+      <y>280</y>
+      <width>161</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Step 3: anonymize nosuffix files</string>
+     <string>anonymize all nosuffix</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_5">
+   <widget class="QPushButton" name="showLogBtn">
     <property name="geometry">
      <rect>
       <x>560</x>
-      <y>160</y>
-      <width>20</width>
-      <height>141</height>
+      <y>150</y>
+      <width>31</width>
+      <height>161</height>
      </rect>
     </property>
     <property name="layoutDirection">
@@ -175,7 +162,7 @@ s
 h
 o
 w
-
+ 》 
 l
 o
 g
@@ -186,7 +173,7 @@ g
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>50</y>
+      <y>60</y>
       <width>501</width>
       <height>191</height>
      </rect>
@@ -196,7 +183,7 @@ g
     <property name="geometry">
      <rect>
       <x>610</x>
-      <y>280</y>
+      <y>290</y>
       <width>501</width>
       <height>111</height>
      </rect>
@@ -218,6 +205,32 @@ g
      <enum>Qt::AutoText</enum>
     </property>
    </widget>
+   <widget class="QPushButton" name="openFolderBtn">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>40</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>anonymize folder</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="openFileBtn">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>40</y>
+      <width>121</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>anonymize file</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -228,7 +241,35 @@ g
      <height>23</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuAbout">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+    <addaction name="actionAbout_Qt"/>
+   </widget>
+   <addaction name="menuAbout"/>
   </widget>
+  <action name="actionopen_folder">
+   <property name="text">
+    <string>open folder</string>
+   </property>
+  </action>
+  <action name="actionopen_file">
+   <property name="text">
+    <string>open file</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
+  <action name="actionAbout_Qt">
+   <property name="text">
+    <string>About Qt</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
